

****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------

 - QXmlStreamWriter
    * [QTBUG-6893] Fixed adding extra Byte Order Marks when writing to a xml file.

QtGui
-----

 - QBmpHandler
    * [QTBUG-7530] Fixed an infinite loop that could occur when reading invalid BMP images.

 - QGraphicsEffect
    * [QTBUG-6901] Fixed performance problem when translating items with
      graphics effects.

 - QImage
    * [QTBUG-7231] Avoid an unnecessary copy in QImage::scaled().

 - QPDFEngine
    * [QTBUG-7249] Fixed the encoding of the Tile and Creator tags in the PDF engine.

 * [QTBUG-7029] Fixed a crash when re-creating QApplication object due to a
   dangling gesture manager pointer.

QtDBus
------

 - foo
    * bar

QtNetwork
---------

 - foo
    * bar

QtOpenGL
--------

 - [QTBUG-7490] Better support for user-generated binary shaders.

 - QGLWidget
    * [QTBUG-7213] Fixed QGLWidget::renderPixmap() on Windows.

 - QGLPixelBuffer
    * [QTBUG-7476] Fixed a crash under X11 when drawing QPixmaps to QGLPixelBuffers.

 - QGL2PaintEngineEx
    * [QTBUG-7203] Reset the GL stencil mask, op and function in resetGLState().

QtOpenVG
--------

 - [QTBUG-7791] Optimize single-rect IntersectClip in OpenVG using the scissor.
 - [QTBUG-7864] Use OpenVG scissor on 90/180/270 rotations and simple clips.

QtScript
--------

 - foo
    * bar

QtSql
-----

 - foo
    * bar

QtXml
-----

 - foo
    * bar

QtMultimedia
------------

 - QAudioInput
    * [QTBUG-7044]: QAudioInput stopped working correctly after suspend()/resume() on linux.

Qt Plugins
----------

 - foo
    * bar

Third party components
----------------------

 - Updated foo to version 2.3.9.

 - Updated bar to the latest version from baz.org.


****************************************************************************