@@ -46,6 +46,9 @@ QtCore
 QtGui
 -----
 
+ - QAbstractScrollArea
+    * [QTBUG-1760] Reverted horizontal scrolling with mouse wheel when vertical scrollbar is hidden
+
  - QBmpHandler
     * [QTBUG-7530] Fixed an infinite loop that could occur when reading invalid BMP images.
 
